--- a/code/less/template.less
+++ b/code/less/template.less
@@ -92,13 +92,12 @@ html {
 
 		.btn-group > .btn:first-child,
 		.radio.btn-group > label:first-of-type {
-			margin-left: 0;
-			-webkit-border-bottom-left-radius: @baseBorderRadius;
-			border-bottom-left-radius: @baseBorderRadius;
-			-webkit-border-top-left-radius: @baseBorderRadius;
-			border-top-left-radius: @baseBorderRadius;
-			-moz-border-radius-bottomleft: @baseBorderRadius;
-			-moz-border-radius-topleft: @baseBorderRadius;
+			-webkit-border-bottom-left-radius: 0;
+			border-bottom-left-radius: 0;
+			-webkit-border-top-left-radius: 0;
+			border-top-left-radius: 0;
+			-moz-border-radius-bottomleft: 0;
+			-moz-border-radius-topleft: 0;
 			-webkit-border-bottom-right-radius: @baseBorderRadius;
 			border-bottom-right-radius: @baseBorderRadius;
 			-webkit-border-top-right-radius: @baseBorderRadius;
