Improve column count warning
#407

--- a/src/wright/parameters/assets/columns/columns.css
+++ b/src/wright/parameters/assets/columns/columns.css
@@ -11,6 +11,10 @@ div.col select {
 	width: 90%;
 }
 
+p#column_info #columns_warning {
+    color: red;
+}
+
 p#column_info,
 div#columns {
 	clear: both;
