--- a/src/wright/css/font-awesome.css
+++ b/src/wright/css/font-awesome.css
@@ -32,7 +32,7 @@
     src: url(../webfonts/fa-brands-400.eot?#iefix) format("embedded-opentype"), url(../webfonts/fa-brands-400.woff2) format("woff2"), url(../webfonts/fa-brands-400.woff) format("woff"), url(../webfonts/fa-brands-400.ttf) format("truetype"), url(../webfonts/fa-brands-400.svg#fontawesome) format("svg")
 }
 
-.icon-brands {
+.icon-brand {
     font-family: "FontAwesomeBrands"
 }
 
