Fix brand icons font-weight

--- a/src/wright/css/font-awesome.css
+++ b/src/wright/css/font-awesome.css
@@ -33,7 +33,8 @@
 }
 
 .icon-brand {
-    font-family: "FontAwesomeBrands"
+    font-family: "FontAwesomeBrands";
+    font-weight: normal;
 }
 
 .icon-lg {
