--- a/src/scss/template-generic.scss
+++ b/src/scss/template-generic.scss
@@ -1,1 +1,26 @@
 // Put the code to override native bootstrap stuff here
+
+.footer1,
+.footer2 {
+    text-align: center;
+}
+
+#footer {
+    color: $white;
+    overflow: hidden;
+    background-color: #1b1b1b;
+    background-repeat: repeat-x;
+    border-color: #252525;
+
+    .footer-content {
+
+        a:hover {
+            color: $gray-700;
+        }
+    }
+
+    .moduletable,
+    .module {
+        @extend .m-0;
+    }
+}
