Font Awesome relocation

--- a/src/wright/css/font-awesome5.css
+++ b/src/wright/css/font-awesome5.css
@@ -7,8 +7,8 @@
     font-family: "FontAwesomeSolid";
     font-style: normal;
     font-weight: 900;
-    src: url(../webfonts/fa-solid-900.eot);
-    src: url(../webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../webfonts/fa-solid-900.woff2) format("woff2"), url(../webfonts/fa-solid-900.woff) format("woff"), url(../webfonts/fa-solid-900.ttf) format("truetype"), url(../webfonts/fa-solid-900.svg#fontawesome) format("svg")
+    src: url(../font/fa5/fa-solid-900.eot);
+    src: url(../font/fa5/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../font/fa5/fa-solid-900.woff2) format("woff2"), url(../font/fa5/fa-solid-900.woff) format("woff"), url(../font/fa5/fa-solid-900.ttf) format("truetype"), url(../font/fa5/fa-solid-900.svg#fontawesome) format("svg")
 }
 
 [class^="icon-"],
@@ -28,8 +28,8 @@
     font-family: "FontAwesomeBrands";
     font-style: normal;
     font-weight: normal;
-    src: url(../webfonts/fa-brands-400.eot);
-    src: url(../webfonts/fa-brands-400.eot?#iefix) format("embedded-opentype"), url(../webfonts/fa-brands-400.woff2) format("woff2"), url(../webfonts/fa-brands-400.woff) format("woff"), url(../webfonts/fa-brands-400.ttf) format("truetype"), url(../webfonts/fa-brands-400.svg#fontawesome) format("svg")
+    src: url(../font/fa5/fa-brands-400.eot);
+    src: url(../font/fa5/fa-brands-400.eot?#iefix) format("embedded-opentype"), url(../font/fa5/fa-brands-400.woff2) format("woff2"), url(../font/fa5/fa-brands-400.woff) format("woff"), url(../font/fa5/fa-brands-400.ttf) format("truetype"), url(../font/fa5/fa-brands-400.svg#fontawesome) format("svg")
 }
 
 .icon-brand {
