--- a/src/scss/variables-generic.scss
+++ b/src/scss/variables-generic.scss
@@ -2,7 +2,7 @@
 //
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
-
+$color-one: #007bff;
 
 //
 // Color system
@@ -70,7 +70,7 @@ $colors: map-merge(
                 $colors
 );
 
-$primary:       $blue !default;
+$primary:       $color-one !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
