Green color as base

--- a/src/scss/variables-generic.scss
+++ b/src/scss/variables-generic.scss
@@ -2,7 +2,7 @@
 //
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
-$color-one: #007bff;
+$color-one: #00A878;
 
 //
 // Color system
