--- a/src/wright/font/fa5/font-awesome5.min.scss
+++ b/src/wright/font/fa5/font-awesome5.min.scss
@@ -14,6 +14,6 @@
 @import 'scss/stacked';
 @import 'scss/icons';
 @import 'scss/screen-reader';
-@import 'scss/regular';
+//@import 'scss/regular'; // Only available with Font Awesome Pro
 @import 'scss/solid';
 @import 'scss/brands';
