--- a/src/scss/variables-generic.scss
+++ b/src/scss/variables-generic.scss
@@ -347,6 +347,7 @@ $table-caption-color:         $text-muted !default;
 //
 // Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
 
+$input-max-width:             240px; // Maximum width for form fields using "form-control" class
 $input-btn-padding-y:         .375rem !default;
 $input-btn-padding-x:         .75rem !default;
 $input-btn-line-height:       $line-height-base !default;
