--- a/src/wright/font/fa5/scss/_variables.scss
+++ b/src/wright/font/fa5/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 // --------------------------
 
-$fa-font-path:                "../font/fa5/webfonts" !default;
+$fa-font-path:                "../wright/font/fa5/webfonts" !default;
 $fa-font-size-base:           16px !default;
 $fa-css-prefix:               fa !default;
 $fa-version:                  "5.3.1" !default;
