--- a/src/css/form.css
+++ b/src/css/form.css
@@ -1,1 +1,78 @@
-.choices__list--dropdown{z-index:10}.choices__button_joomla{position:relative;text-indent:-9999px;cursor:pointer;background:none;border:0;-moz-appearance:none;-webkit-appearance:none;appearance:none}.choices__button_joomla::before{position:absolute;top:0;right:0;bottom:0;left:0;display:block;text-align:center;text-indent:0;content:"\00d7"}.choices__button_joomla:focus{outline:none}.choices[data-type*="select-one"] .choices__button_joomla{position:absolute;top:50%;right:0;width:20px;height:20px;padding:0;margin-top:-10px;margin-right:25px;border-radius:10em;opacity:.5}.choices[data-type*="select-one"] .choices__button_joomla:hover,.choices[data-type*="select-one"] .choices__button_joomla:focus{opacity:1}.choices[data-type*="select-one"] .choices__button_joomla:focus{-moz-box-shadow:0 0 0 2px #00bcd4;-webkit-box-shadow:0 0 0 2px #00bcd4;box-shadow:0 0 0 2px #00bcd4}.choices[data-type*="select-one"][dir="rtl"] .choices__button_joomla{right:auto;left:0;margin-right:0;margin-left:25px}.choices[data-type*="select-multiple"] .choices__button_joomla,.choices[data-type*="text"] .choices__button_joomla{position:relative;display:inline-block;width:8px;padding-left:16px;margin-top:0;margin-right:-4px;margin-bottom:0;margin-left:8px;line-height:1;border-left:1px solid #008fa1;opacity:.75}.choices[data-type*="select-multiple"] .choices__button_joomla:hover,.choices[data-type*="select-multiple"] .choices__button_joomla:focus,.choices[data-type*="text"] .choices__button_joomla:hover,.choices[data-type*="text"] .choices__button_joomla:focus{opacity:1}.choices[data-type*="select-multiple"] .choices__button_joomla::before,.choices[data-type*="text"] .choices__button_joomla::before{color:#fff}
+/* ==== Load in article edit ====
+ *
+ * The order of these files matter!
+*/
+/* ==== CSS for element forms in frontend ====
+ *
+ * Backend Joomla 4 Template
+ * https://github.com/joomla/40-backend-template
+*/
+.choices__list--dropdown {
+  z-index: 10; }
+
+.choices__button_joomla {
+  position: relative;
+  text-indent: -9999px;
+  cursor: pointer;
+  background: none;
+  border: 0;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none; }
+  .choices__button_joomla::before {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    text-align: center;
+    text-indent: 0;
+    content: "\00d7"; }
+  .choices__button_joomla:focus {
+    outline: none; }
+
+.choices[data-type*="select-one"] .choices__button_joomla {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  margin-top: -10px;
+  margin-right: 25px;
+  border-radius: 10em;
+  opacity: .5; }
+  .choices[data-type*="select-one"] .choices__button_joomla:hover, .choices[data-type*="select-one"] .choices__button_joomla:focus {
+    opacity: 1; }
+  .choices[data-type*="select-one"] .choices__button_joomla:focus {
+    -moz-box-shadow: 0 0 0 2px #00bcd4;
+    -webkit-box-shadow: 0 0 0 2px #00bcd4;
+    box-shadow: 0 0 0 2px #00bcd4; }
+
+.choices[data-type*="select-one"][dir="rtl"] .choices__button_joomla {
+  right: auto;
+  left: 0;
+  margin-right: 0;
+  margin-left: 25px; }
+
+.choices[data-type*="select-multiple"] .choices__button_joomla,
+.choices[data-type*="text"] .choices__button_joomla {
+  position: relative;
+  display: inline-block;
+  width: 8px;
+  padding-left: 16px;
+  margin-top: 0;
+  margin-right: -4px;
+  margin-bottom: 0;
+  margin-left: 8px;
+  line-height: 1;
+  border-left: 1px solid #008fa1;
+  opacity: .75; }
+  .choices[data-type*="select-multiple"] .choices__button_joomla:hover, .choices[data-type*="select-multiple"] .choices__button_joomla:focus,
+  .choices[data-type*="text"] .choices__button_joomla:hover,
+  .choices[data-type*="text"] .choices__button_joomla:focus {
+    opacity: 1; }
+  .choices[data-type*="select-multiple"] .choices__button_joomla::before,
+  .choices[data-type*="text"] .choices__button_joomla::before {
+    color: #fff; }
