--- a/src/css/frontendediting.css
+++ b/src/css/frontendediting.css
@@ -6,6 +6,8 @@
  *
  * Backend Joomla 4 Template
  * https://github.com/joomla/40-backend-template
+ * Copyright (C) 2005 - 2019 Open Source Matters, Inc. All rights reserved.
+ * GNU General Public License version 2 or later; see LICENSE.txt
 */
 .choices__list--dropdown {
   z-index: 10; }
