--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -3587,10 +3587,10 @@ input[type="button"].btn-block {
 
 .list-group-item-action {
   width: 100%;
-  color: #495057;
+  color: #00A878;
   text-align: inherit; }
   .list-group-item-action:hover, .list-group-item-action:focus {
-    color: #495057;
+    color: #00A878;
     text-decoration: none;
     background-color: #f8f9fa; }
   .list-group-item-action:active {
@@ -6757,15 +6757,12 @@ p.img_caption {
 
 dl.article-info {
   font-size: 0.8em;
-  margin-bottom: 0.7rem; }
+  margin-bottom: 1rem; }
   dl.article-info > dt,
   dl.article-info > dd {
     display: inline-block;
     margin-right: 15px;
     margin-bottom: .2rem; }
-
-.icons-actions {
-  margin-bottom: 0.7rem; }
 
 .page-header {
   padding-bottom: 0.5rem;
