Improve single contact component layout

--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -6600,6 +6600,19 @@ div.joomlashack {
     width: 75px;
     height: auto; }
 
+dl dt {
+  float: left;
+  width: 160px;
+  clear: left;
+  text-align: right;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+
+dl dd {
+  margin-left: 180px;
+  margin-bottom: 10px; }
+
 /* Hidden text */
 a:hover, a:active, a:focus {
   text-decoration: none; }
@@ -6903,6 +6916,30 @@ form:not(.form-no-margin) .control-group {
 
 form .control-group .control-label .optional {
   font-size: 0.8em; }
+
+/* Contact */
+@media (min-width: 768px) {
+  .com-contact.contact .thumbnail {
+    float: right; } }
+
+@media (max-width: 767px) {
+  .com-contact.contact .thumbnail {
+    margin-bottom: 1.5rem; } }
+
+.wf-contact-single-icons dl dt {
+  width: 30px; }
+
+[dir="ltr"] .wf-contact-single-icons dl dt {
+  text-align: left; }
+
+[dir="ltr"] .wf-contact-single-icons dl dd {
+  margin-left: 30px; }
+
+[dir="rtl"] .wf-contact-single-icons dl dt {
+  text-align: right; }
+
+[dir="rtl"] .wf-contact-single-icons dl dd {
+  margin-right: 30px; }
 
 /* Responsive utilities */
 @media (max-width: 575px) {
