--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -6785,7 +6785,11 @@ dl.article-info {
   dl.article-info > dd {
     display: inline-block;
     margin-right: 15px;
-    margin-bottom: .2rem; }
+    margin-bottom: .2rem;
+    overflow: visible;
+    float: none;
+    width: auto;
+    margin-left: 0; }
 
 .page-header {
   padding-bottom: 0.5rem;
