Enable hover dropdown menus for desktop

--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -6626,37 +6626,37 @@ a.hidden-text span.hidden-text {
 #nav-bottom-menu > .menu {
   width: 100%; }
 
-#nav-menu .dropdown:hover > .dropdown-menu,
-#nav-toolbar .dropdown:hover > .dropdown-menu,
-#nav-bottom-menu .dropdown:hover > .dropdown-menu {
-  display: block; }
-
-#nav-menu .dropdown-submenu,
-#nav-toolbar .dropdown-submenu,
-#nav-bottom-menu .dropdown-submenu {
-  position: relative; }
-  #nav-menu .dropdown-submenu:hover > a,
-  #nav-menu .dropdown-submenu:focus > a,
-  #nav-toolbar .dropdown-submenu:hover > a,
-  #nav-toolbar .dropdown-submenu:focus > a,
-  #nav-bottom-menu .dropdown-submenu:hover > a,
-  #nav-bottom-menu .dropdown-submenu:focus > a {
-    color: #16181b;
-    background-color: #f8f9fa; }
-  #nav-menu .dropdown-submenu a:after,
-  #nav-toolbar .dropdown-submenu a:after,
-  #nav-bottom-menu .dropdown-submenu a:after {
-    transform: rotate(-90deg);
-    position: absolute;
-    right: 6px;
-    top: .8em; }
-  #nav-menu .dropdown-submenu .dropdown-menu,
-  #nav-toolbar .dropdown-submenu .dropdown-menu,
-  #nav-bottom-menu .dropdown-submenu .dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-left: .1rem;
-    margin-right: .1rem; }
+@media (min-width: 992px) {
+  #nav-menu .dropdown:hover > .dropdown-menu,
+  #nav-toolbar .dropdown:hover > .dropdown-menu,
+  #nav-bottom-menu .dropdown:hover > .dropdown-menu {
+    display: block; }
+  #nav-menu .dropdown-submenu,
+  #nav-toolbar .dropdown-submenu,
+  #nav-bottom-menu .dropdown-submenu {
+    position: relative; }
+    #nav-menu .dropdown-submenu:hover > a,
+    #nav-menu .dropdown-submenu:focus > a,
+    #nav-toolbar .dropdown-submenu:hover > a,
+    #nav-toolbar .dropdown-submenu:focus > a,
+    #nav-bottom-menu .dropdown-submenu:hover > a,
+    #nav-bottom-menu .dropdown-submenu:focus > a {
+      color: #16181b;
+      background-color: #f8f9fa; }
+    #nav-menu .dropdown-submenu a:after,
+    #nav-toolbar .dropdown-submenu a:after,
+    #nav-bottom-menu .dropdown-submenu a:after {
+      transform: rotate(-90deg);
+      position: absolute;
+      right: 6px;
+      top: .8em; }
+    #nav-menu .dropdown-submenu .dropdown-menu,
+    #nav-toolbar .dropdown-submenu .dropdown-menu,
+    #nav-bottom-menu .dropdown-submenu .dropdown-menu {
+      top: 0;
+      left: 100%;
+      margin-left: .1rem;
+      margin-right: .1rem; } }
 
 .nav li a .fas,
 .nav li a .far,
