--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* ==== Generic style ====
  *
  * The order of these files matter!
@@ -6448,6 +6449,28 @@ a.text-dark:hover, a.text-dark:focus {
 
 .p-l-4 {
   padding-left: 4rem !important; }
+
+.wf-item-children .wf-level-2 .wf-level-sign:before,
+.wf-item-children .wf-level-3 .wf-level-sign:before,
+.wf-item-children .wf-level-4 .wf-level-sign:before,
+.wf-item-children .wf-level-5 .wf-level-sign:before,
+.wf-item-children .wf-level-6 .wf-level-sign:before {
+  display: inline-block; }
+
+.wf-item-children .wf-level-2 .wf-level-sign:before {
+  content: "—"; }
+
+.wf-item-children .wf-level-3 .wf-level-sign:before {
+  content: "— -"; }
+
+.wf-item-children .wf-level-4 .wf-level-sign:before {
+  content: "— - -"; }
+
+.wf-item-children .wf-level-5 .wf-level-sign:before {
+  content: "— - - -"; }
+
+.wf-item-children .wf-level-6 .wf-level-sign:before {
+  content: "— - - - -"; }
 
 body.b_arial {
   font-family: Arial,"Helvetica Neue",Helvetica,sans-serif; }
