Smart search override tweaks

--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -6899,6 +6899,15 @@ dl.article-info {
   .filter-search #limit {
     margin-bottom: 1rem; } }
 
+/* Smart Search */
+.com-finder__search .input-group .awesomplete input {
+  border-top-right-radius: 0;
+  -moz-border-top-right-radius: 0;
+  -webkit-border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  -moz-border-bottom-right-radius: 0;
+  -webkit-border-bottom-right-radius: 0; }
+
 /* Search */
 span.highlight {
   background-color: #f9f952; }
