--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -6836,9 +6836,12 @@ p.img_caption {
   margin-bottom: 1rem;
   max-width: 100%; }
 
+ul.tags {
+  margin-bottom: 1rem; }
+
 dl.article-info {
   font-size: 0.8em;
-  margin-bottom: 1.5rem; }
+  margin-bottom: 1rem; }
   dl.article-info > dt,
   dl.article-info > dd {
     display: inline-block;
