--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -6627,10 +6627,7 @@ dl dt {
   float: left;
   width: 160px;
   clear: left;
-  text-align: right;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap; }
+  text-align: right; }
 
 dl dd {
   margin-left: 180px;
