New template.scss file and new main menu radius

--- a/src/scss/joomla-generic.scss
+++ b/src/scss/joomla-generic.scss
@@ -6,4 +6,5 @@
 @import "../wright/build/scss/_beforevars";
 @import "variables-generic";
 @import "../wright/build/scss/_aftervars";
+@import "template";
 @import "style-generic";
