--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -398,7 +398,7 @@ mark,
   padding: 0.25rem;
   background-color: #fff;
   border: 1px solid #dee2e6;
-  border-radius: 0rem;
+  border-radius: 0.2rem;
   max-width: 100%;
   height: auto; }
 
@@ -425,7 +425,7 @@ kbd {
   font-size: 87.5%;
   color: #fff;
   background-color: #212529;
-  border-radius: 0.2rem; }
+  border-radius: 0.15rem; }
   kbd kbd {
     padding: 0;
     font-size: 100%;
@@ -1257,7 +1257,7 @@ pre {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
-  border-radius: 0rem;
+  border-radius: 0.2rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
   @media screen and (prefers-reduced-motion: reduce) {
     .form-control {
@@ -1340,7 +1340,7 @@ select.form-control:focus::-ms-value {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5;
-  border-radius: 0.2rem; }
+  border-radius: 0.15rem; }
 
 select.form-control-sm:not([size]):not([multiple]), .input-group-sm > select.form-control:not([size]):not([multiple]),
 .input-group-sm > .input-group-prepend > select.input-group-text:not([size]):not([multiple]),
@@ -1357,7 +1357,7 @@ select.form-control-sm:not([size]):not([multiple]), .input-group-sm > select.for
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   line-height: 1.5;
-  border-radius: 0.3rem; }
+  border-radius: 0.25rem; }
 
 select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.form-control:not([size]):not([multiple]),
 .input-group-lg > .input-group-prepend > select.input-group-text:not([size]):not([multiple]),
@@ -1628,7 +1628,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
-  border-radius: 0rem;
+  border-radius: 0.2rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
   @media screen and (prefers-reduced-motion: reduce) {
     .btn {
@@ -2038,13 +2038,13 @@ fieldset:disabled a.btn {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   line-height: 1.5;
-  border-radius: 0.3rem; }
+  border-radius: 0.25rem; }
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5;
-  border-radius: 0.2rem; }
+  border-radius: 0.15rem; }
 
 .btn-block {
   display: block;
@@ -2115,7 +2115,7 @@ input[type="button"].btn-block {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
 
 .dropdown-menu-right {
   right: 0;
@@ -2431,7 +2431,7 @@ input[type="button"].btn-block {
   white-space: nowrap;
   background-color: #e9ecef;
   border: 1px solid #ced4da;
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
   .input-group-text input[type="radio"],
   .input-group-text input[type="checkbox"] {
     margin-top: 0; }
@@ -2508,7 +2508,7 @@ input[type="button"].btn-block {
     background-size: 50% 50%; }
 
 .custom-checkbox .custom-control-label::before {
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
   background-color: #00A878; }
@@ -2551,7 +2551,7 @@ input[type="button"].btn-block {
   background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
   background-size: 8px 10px;
   border: 1px solid #ced4da;
-  border-radius: 0rem;
+  border-radius: 0.2rem;
   appearance: none; }
   .custom-select:focus {
     border-color: #29ffc2;
@@ -2618,7 +2618,7 @@ input[type="button"].btn-block {
   color: #495057;
   background-color: #fff;
   border: 1px solid #ced4da;
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
   .custom-file-label::after {
     position: absolute;
     top: 0;
@@ -2633,7 +2633,7 @@ input[type="button"].btn-block {
     content: "Browse";
     background-color: #e9ecef;
     border-left: 1px solid #ced4da;
-    border-radius: 0 0rem 0rem 0; }
+    border-radius: 0 0.2rem 0.2rem 0; }
 
 .custom-range {
   width: 100%;
@@ -2756,8 +2756,8 @@ input[type="button"].btn-block {
     margin-bottom: -1px; }
   .nav-tabs .nav-link {
     border: 1px solid transparent;
-    border-top-left-radius: 0rem;
-    border-top-right-radius: 0rem; }
+    border-top-left-radius: 0.2rem;
+    border-top-right-radius: 0.2rem; }
     .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
       border-color: #e9ecef #e9ecef #dee2e6; }
     .nav-tabs .nav-link.disabled {
@@ -2775,7 +2775,7 @@ input[type="button"].btn-block {
     border-top-right-radius: 0; }
 
 .nav-pills .nav-link {
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
 
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
@@ -2851,7 +2851,7 @@ input[type="button"].btn-block {
   line-height: 1;
   background-color: transparent;
   border: 1px solid transparent;
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
   .navbar-toggler:hover, .navbar-toggler:focus {
     text-decoration: none; }
   .navbar-toggler:not(:disabled):not(.disabled) {
@@ -3066,16 +3066,16 @@ input[type="button"].btn-block {
   background-color: #fff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
   .card > hr {
     margin-right: 0;
     margin-left: 0; }
   .card > .list-group:first-child .list-group-item:first-child {
-    border-top-left-radius: 0rem;
-    border-top-right-radius: 0rem; }
+    border-top-left-radius: 0.2rem;
+    border-top-right-radius: 0.2rem; }
   .card > .list-group:last-child .list-group-item:last-child {
-    border-bottom-right-radius: 0rem;
-    border-bottom-left-radius: 0rem; }
+    border-bottom-right-radius: 0.2rem;
+    border-bottom-left-radius: 0.2rem; }
 
 .card-body {
   flex: 1 1 auto;
@@ -3103,7 +3103,7 @@ input[type="button"].btn-block {
   background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 1px solid rgba(0, 0, 0, 0.125); }
   .card-header:first-child {
-    border-radius: calc(0rem - 1px) calc(0rem - 1px) 0 0; }
+    border-radius: calc(0.2rem - 1px) calc(0.2rem - 1px) 0 0; }
   .card-header + .list-group .list-group-item:first-child {
     border-top: 0; }
 
@@ -3112,7 +3112,7 @@ input[type="button"].btn-block {
   background-color: rgba(0, 0, 0, 0.03);
   border-top: 1px solid rgba(0, 0, 0, 0.125); }
   .card-footer:last-child {
-    border-radius: 0 0 calc(0rem - 1px) calc(0rem - 1px); }
+    border-radius: 0 0 calc(0.2rem - 1px) calc(0.2rem - 1px); }
 
 .card-header-tabs {
   margin-right: -0.625rem;
@@ -3134,17 +3134,17 @@ input[type="button"].btn-block {
 
 .card-img {
   width: 100%;
-  border-radius: calc(0rem - 1px); }
+  border-radius: calc(0.2rem - 1px); }
 
 .card-img-top {
   width: 100%;
-  border-top-left-radius: calc(0rem - 1px);
-  border-top-right-radius: calc(0rem - 1px); }
+  border-top-left-radius: calc(0.2rem - 1px);
+  border-top-right-radius: calc(0.2rem - 1px); }
 
 .card-img-bottom {
   width: 100%;
-  border-bottom-right-radius: calc(0rem - 1px);
-  border-bottom-left-radius: calc(0rem - 1px); }
+  border-bottom-right-radius: calc(0.2rem - 1px);
+  border-bottom-left-radius: calc(0.2rem - 1px); }
 
 .card-deck {
   display: flex;
@@ -3197,15 +3197,15 @@ input[type="button"].btn-block {
           .card-group > .card:last-child .card-footer {
             border-bottom-left-radius: 0; }
         .card-group > .card:only-child {
-          border-radius: 0rem; }
+          border-radius: 0.2rem; }
           .card-group > .card:only-child .card-img-top,
           .card-group > .card:only-child .card-header {
-            border-top-left-radius: 0rem;
-            border-top-right-radius: 0rem; }
+            border-top-left-radius: 0.2rem;
+            border-top-right-radius: 0.2rem; }
           .card-group > .card:only-child .card-img-bottom,
           .card-group > .card:only-child .card-footer {
-            border-bottom-right-radius: 0rem;
-            border-bottom-left-radius: 0rem; }
+            border-bottom-right-radius: 0.2rem;
+            border-bottom-left-radius: 0.2rem; }
         .card-group > .card:not(:first-child):not(:last-child):not(:only-child) {
           border-radius: 0; }
           .card-group > .card:not(:first-child):not(:last-child):not(:only-child) .card-img-top,
@@ -3250,7 +3250,7 @@ input[type="button"].btn-block {
   margin-bottom: 1rem;
   list-style: none;
   background-color: #e9ecef;
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
 
 .breadcrumb-item + .breadcrumb-item {
   padding-left: 0.5rem; }
@@ -3273,7 +3273,7 @@ input[type="button"].btn-block {
   display: flex;
   padding-left: 0;
   list-style: none;
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
 
 .page-link {
   position: relative;
@@ -3299,12 +3299,12 @@ input[type="button"].btn-block {
 
 .page-item:first-child .page-link {
   margin-left: 0;
-  border-top-left-radius: 0rem;
-  border-bottom-left-radius: 0rem; }
+  border-top-left-radius: 0.2rem;
+  border-bottom-left-radius: 0.2rem; }
 
 .page-item:last-child .page-link {
-  border-top-right-radius: 0rem;
-  border-bottom-right-radius: 0rem; }
+  border-top-right-radius: 0.2rem;
+  border-bottom-right-radius: 0.2rem; }
 
 .page-item.active .page-link {
   z-index: 1;
@@ -3325,12 +3325,12 @@ input[type="button"].btn-block {
   line-height: 1.5; }
 
 .pagination-lg .page-item:first-child .page-link {
-  border-top-left-radius: 0.3rem;
-  border-bottom-left-radius: 0.3rem; }
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem; }
 
 .pagination-lg .page-item:last-child .page-link {
-  border-top-right-radius: 0.3rem;
-  border-bottom-right-radius: 0.3rem; }
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem; }
 
 .pagination-sm .page-link {
   padding: 0.25rem 0.5rem;
@@ -3338,12 +3338,12 @@ input[type="button"].btn-block {
   line-height: 1.5; }
 
 .pagination-sm .page-item:first-child .page-link {
-  border-top-left-radius: 0.2rem;
-  border-bottom-left-radius: 0.2rem; }
+  border-top-left-radius: 0.15rem;
+  border-bottom-left-radius: 0.15rem; }
 
 .pagination-sm .page-item:last-child .page-link {
-  border-top-right-radius: 0.2rem;
-  border-bottom-right-radius: 0.2rem; }
+  border-top-right-radius: 0.15rem;
+  border-bottom-right-radius: 0.15rem; }
 
 .badge {
   display: inline-block;
@@ -3354,7 +3354,7 @@ input[type="button"].btn-block {
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
   .badge:empty {
     display: none; }
 
@@ -3435,7 +3435,7 @@ input[type="button"].btn-block {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
   background-color: #e9ecef;
-  border-radius: 0.3rem; }
+  border-radius: 0.25rem; }
   @media (min-width: 576px) {
     .jumbotron {
       padding: 4rem 2rem; } }
@@ -3450,7 +3450,7 @@ input[type="button"].btn-block {
   padding: 0.75rem 1.25rem;
   margin-bottom: 1rem;
   border: 1px solid transparent;
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
 
 .alert-heading {
   color: inherit; }
@@ -3551,7 +3551,7 @@ input[type="button"].btn-block {
   overflow: hidden;
   font-size: 0.75rem;
   background-color: #e9ecef;
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
 
 .progress-bar {
   display: flex;
@@ -3606,12 +3606,12 @@ input[type="button"].btn-block {
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125); }
   .list-group-item:first-child {
-    border-top-left-radius: 0rem;
-    border-top-right-radius: 0rem; }
+    border-top-left-radius: 0.2rem;
+    border-top-right-radius: 0.2rem; }
   .list-group-item:last-child {
     margin-bottom: 0;
-    border-bottom-right-radius: 0rem;
-    border-bottom-left-radius: 0rem; }
+    border-bottom-right-radius: 0.2rem;
+    border-bottom-left-radius: 0.2rem; }
   .list-group-item:hover, .list-group-item:focus {
     z-index: 1;
     text-decoration: none; }
@@ -3789,7 +3789,7 @@ button.close {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.3rem;
+  border-radius: 0.25rem;
   outline: 0; }
 
 .modal-backdrop {
@@ -3811,8 +3811,8 @@ button.close {
   justify-content: space-between;
   padding: 1rem;
   border-bottom: 1px solid #e9ecef;
-  border-top-left-radius: 0.3rem;
-  border-top-right-radius: 0.3rem; }
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem; }
   .modal-header .close {
     padding: 1rem;
     margin: -1rem -1rem -1rem auto; }
@@ -3938,7 +3938,7 @@ button.close {
   color: #fff;
   text-align: center;
   background-color: #000;
-  border-radius: 0rem; }
+  border-radius: 0.2rem; }
 
 .popover {
   position: absolute;
@@ -3966,13 +3966,13 @@ button.close {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 0.3rem; }
+  border-radius: 0.25rem; }
   .popover .arrow {
     position: absolute;
     display: block;
     width: 1rem;
     height: 0.5rem;
-    margin: 0 0.3rem; }
+    margin: 0 0.25rem; }
     .popover .arrow::before, .popover .arrow::after {
       position: absolute;
       display: block;
@@ -4003,7 +4003,7 @@ button.close {
     left: calc((0.5rem + 1px) * -1);
     width: 0.5rem;
     height: 1rem;
-    margin: 0.3rem 0; }
+    margin: 0.25rem 0; }
   .bs-popover-right .arrow::before, .bs-popover-auto[x-placement^="right"] .arrow::before,
   .bs-popover-right .arrow::after,
   .bs-popover-auto[x-placement^="right"] .arrow::after {
@@ -4049,7 +4049,7 @@ button.close {
     right: calc((0.5rem + 1px) * -1);
     width: 0.5rem;
     height: 1rem;
-    margin: 0.3rem 0; }
+    margin: 0.25rem 0; }
   .bs-popover-left .arrow::before, .bs-popover-auto[x-placement^="left"] .arrow::before,
   .bs-popover-left .arrow::after,
   .bs-popover-auto[x-placement^="left"] .arrow::after {
@@ -4070,8 +4070,8 @@ button.close {
   color: inherit;
   background-color: #f7f7f7;
   border-bottom: 1px solid #ebebeb;
-  border-top-left-radius: calc(0.3rem - 1px);
-  border-top-right-radius: calc(0.3rem - 1px); }
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px); }
   .popover-header:empty {
     display: none; }
 
@@ -4401,23 +4401,23 @@ button.bg-dark:focus {
   border-color: #fff !important; }
 
 .rounded {
-  border-radius: 0rem !important; }
+  border-radius: 0.2rem !important; }
 
 .rounded-top {
-  border-top-left-radius: 0rem !important;
-  border-top-right-radius: 0rem !important; }
+  border-top-left-radius: 0.2rem !important;
+  border-top-right-radius: 0.2rem !important; }
 
 .rounded-right {
-  border-top-right-radius: 0rem !important;
-  border-bottom-right-radius: 0rem !important; }
+  border-top-right-radius: 0.2rem !important;
+  border-bottom-right-radius: 0.2rem !important; }
 
 .rounded-bottom {
-  border-bottom-right-radius: 0rem !important;
-  border-bottom-left-radius: 0rem !important; }
+  border-bottom-right-radius: 0.2rem !important;
+  border-bottom-left-radius: 0.2rem !important; }
 
 .rounded-left {
-  border-top-left-radius: 0rem !important;
-  border-bottom-left-radius: 0rem !important; }
+  border-top-left-radius: 0.2rem !important;
+  border-bottom-left-radius: 0.2rem !important; }
 
 .rounded-circle {
   border-radius: 50% !important; }
@@ -6977,12 +6977,12 @@ joomla-alert {
 
 .com-tags #filter-search,
 .com-tags-tag #filter-search {
-  border-top-left-radius: 0rem;
-  -moz-border-top-left-radius: 0rem;
-  -webkit-border-top-left-radius: 0rem;
-  border-bottom-left-radius: 0rem;
-  -moz-border-bottom-left-radius: 0rem;
-  -webkit-border-bottom-left-radius: 0rem; }
+  border-top-left-radius: 0.2rem;
+  -moz-border-top-left-radius: 0.2rem;
+  -webkit-border-top-left-radius: 0.2rem;
+  border-bottom-left-radius: 0.2rem;
+  -moz-border-bottom-left-radius: 0.2rem;
+  -webkit-border-bottom-left-radius: 0.2rem; }
 
 /* Random image */
 .mod-randomimage img {
@@ -11114,6 +11114,9 @@ readers do not read off random characters that represent icons */
 
 .fab {
   font-family: 'Font Awesome 5 Brands'; }
+
+#menu > .navbar {
+  border-radius: 0.2rem; }
 
 .footer1,
 .footer2 {
