--- a/src/scss/style-generic.scss
+++ b/src/scss/style-generic.scss
@@ -1,32 +1,1 @@
-// Style to override native bootstrap and extra tweaks
-//
-// Don't touch this file!
-
-.footer1,
-.footer2 {
-  text-align: center;
-}
-
-#footer {
-  color: $white;
-  overflow: hidden;
-  background-color: #1b1b1b;
-  background-repeat: repeat-x;
-  border-color: #252525;
-
-  .footer-content {
-
-    a:hover {
-      color: $gray-700;
-    }
-  }
-
-  .moduletable,
-  .module {
-    @extend .m-0;
-  }
-}
-
-.wrapper-menu {
-  margin-bottom: 1rem;
-}
+// CSS to apply only the generic style
