--- a/src/scss/variables-generic.scss
+++ b/src/scss/variables-generic.scss
@@ -202,10 +202,10 @@ $grid-breakpoints: (
 // Define the maximum width of `.container` for different screen sizes.
 
 $container-max-widths: (
-        sm: 540px,
-        md: 720px,
+        sm: 100%,  // 540px,
+        md: 980px, // 720px
         lg: 960px,
-        xl: 1140px
+        xl: 1200px // 1140px
 ) !default;
 
 @include _assert-ascending($container-max-widths, "$container-max-widths");
