--- a/src/scss/template.scss
+++ b/src/scss/template.scss
@@ -11,8 +11,8 @@
 #toolbar {
 
   .navbar {
-    padding-bottom: 0.1em;
-    padding-top: 0.1em;
+    //padding-bottom: 0.1em;
+    //padding-top: 0.1em;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   }
 }
