Increase margin bottom for JS logo

--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -6617,7 +6617,7 @@ img {
 div.joomlashack {
   font-size: 11px;
   text-align: center;
-  margin: 10px auto; }
+  margin: 10px auto 20px; }
   div.joomlashack a {
     color: #fff;
     text-decoration: none; }
