--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -2116,7 +2116,7 @@ input[type="button"].btn-block {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 0.2rem; }
+  border-radius: 0; }
 
 .dropdown-menu-right {
   right: 0;
@@ -3250,7 +3250,7 @@ input[type="button"].btn-block {
   padding: 0.75rem 1rem;
   margin-bottom: 1rem;
   list-style: none;
-  background-color: #e9ecef;
+  background-color: #f8f9fa;
   border-radius: 0; }
 
 .breadcrumb-item + .breadcrumb-item {
