--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -7149,28 +7149,17 @@ form .control-group .control-label .optional {
     -webkit-transform: translateY(1rem);
     -webkit-opacity: 0; } }
 
-.dropdown-menu {
-  -webkit-animation-name: wFmenuAnimate;
-  animation-name: wFmenuAnimate; }
-
 @media (min-width: 992px) {
   /* Dropdown */
-  .dropdown-menu {
+  #nav-menu .dropdown-menu,
+  #nav-toolbar .dropdown-menu,
+  #nav-bottom-menu .dropdown-menu {
+    -webkit-animation-name: wFmenuAnimate;
+    animation-name: wFmenuAnimate;
     animation-duration: 0.3s;
     -webkit-animation-duration: 0.3s;
     animation-fill-mode: both;
-    -webkit-animation-fill-mode: both; }
-  #nav-menu .dropdown:hover > .dropdown-menu,
-  #nav-toolbar .dropdown:hover > .dropdown-menu,
-  #nav-bottom-menu .dropdown:hover > .dropdown-menu {
-    display: block; }
-  #nav-menu .dropdown-submenu .dropdown-menu,
-  #nav-toolbar .dropdown-submenu .dropdown-menu,
-  #nav-bottom-menu .dropdown-submenu .dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-left: .1rem;
-    margin-right: .1rem; } }
+    -webkit-animation-fill-mode: both; } }
 
 .wf-row {
   display: flex;
